--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "nth-check": ">=2.0.1",
     "dotenv": "^16.0.1",
     "enzyme": "^3.11.0",
     "jest": "^27.5.1"
