--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "nth-check": ">=2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,9 +41,9 @@
     ]
   },
   "devDependencies": {
-    "nth-check": ">=2.0.1",
     "dotenv": "^16.0.1",
     "enzyme": "^3.11.0",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "nth-check": "^2.1.1"
   }
 }
