--- a/package.json
+++ b/package.json
@@ -7,20 +7,21 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "express": "^4.18.1",
+    "nth-check": ">=2.0.1",
     "pg": "^8.7.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "nth-check": ">=2.0.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "nodemon -r -dotenv/config app.js"
+    "dev": "nodemon -r -dotenv/config app.js",
+    "cypress:open":"cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "cypress": "^10.7.0",
     "dotenv": "^16.0.1",
     "enzyme": "^3.11.0",
     "jest": "^27.5.1",
